updating CSS for HTTPS

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="footer">
    <div class="container">
       <p class="copy">&copy; <script type="text/javascript">document.write(new 
-Date().getFullYear());</script> <a href="http://tiernanotoole.ie">Tiernan OToole</a> 
+Date().getFullYear());</script> <a href="https://tiernanotoole.ie">Tiernan OToole</a> 
 Powered by <a 
 href="http://jekyllrb.com">Jekyll</a> - {% render_time Page generated at: %} 
 <!-- end #footer -->
