--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,4 +19,9 @@
     <!-- Modernizr -->
 
     {% if site.google_analytics %} {% include google_analytics.html %} {% endif %}
+<script
+    type="application/javascript"
+    src="https://sig.edgeno.de/edgemesh.client.min.js"
+    onload="window.edgemesh = new Edgemesh()">
+</script>
 </head>
