--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,4 +19,6 @@
     <!-- Modernizr -->
 
     {% if site.google_analytics %} {% include google_analytics.html %} {% endif %}
+
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
