--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -8,5 +8,17 @@
     var s = d.createElement(t); s.type = 'text/javascript'; s.async = true;
     s.src = '//cdn.viglink.com/api/vglnk.js';
     var r = d.getElementsByTagName(t)[0]; r.parentNode.insertBefore(s, r);
-  }(document, 'script'));
+  }(document, 'script'));  
+</script>
+
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
 </script>
